kubernetes/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask
  ports:
    - port: 5001
      targetPort: 5002
