kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: next-app
  ports:
    - port: 3001
      targetPort: 3000
