kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
spec:
  rules:
    - host: flaskapp.com
      http:
          paths:
            - path: /api/v1/book
              pathType: Prefix
              backend:
                service:
                  name: frontend-service
                  port:
                    number: 3001
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: flask-service
                  port:
                    number: 5001
